# oui

./: .gitattributes  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.md  README_ZH.md  Vagrantfile  diagram.drawio  index.html  node.mk  oui-app.mk  oui.mk  version.mk
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  formal.yml
applications/oui-app-acl/: Makefile
applications/oui-app-active-routes/: Makefile
applications/oui-app-admin/: Makefile
applications/oui-app-backup/: Makefile
applications/oui-app-bwm/: Makefile
applications/oui-app-cron/: Makefile
applications/oui-app-demo/: Makefile
applications/oui-app-dhcp/: Makefile
applications/oui-app-dhcp-lease/: Makefile
applications/oui-app-diagnostics/: Makefile
applications/oui-app-dmesg/: Makefile
applications/oui-app-example/: Makefile
applications/oui-app-firewall/: Makefile
applications/oui-app-home/: Makefile
applications/oui-app-hosts/: Makefile
applications/oui-app-interfaces/: Makefile
applications/oui-app-layout/: Makefile
applications/oui-app-leds/: Makefile
applications/oui-app-login/: Makefile
applications/oui-app-processes/: Makefile
assets/: 404.html.156f7e7c.js  404.html.8b8ca582.js  404.html.aaf2fe6b.js  404.html.b91fc089.js  Sponsors.92291995.js  Sponsors.9847fa3f.js  Sponsors.c7184588.js  acl.html.1e0bb20c.js  acl.html.2c9cf563.js  acl.html.444a389c.js  acl.html.49e86b04.js  acl.html.6d3d25e5.js  acl.html.9b7c9c62.js  acl.html.bf490514.js  acl.html.e88e4cd9.js  acl.html.fe975473.js  app.1cc6ae6f.js  app.97657172.js  app.9ff75c61.js  getting-started.html.028aa1b3.js  getting-started.html.08fa1848.js  getting-started.html.12dc7770.js  getting-started.html.13a26030.js  getting-started.html.34d4d7e8.js  getting-started.html.56d71407.js  getting-started.html.6393da34.js  getting-started.html.dea8a655.js  getting-started.html.e1637122.js  getting-started.html.e94db6a1.js  getting-started.html.fbfa905e.js  index.html.103e2e7a.js  index.html.23e987a9.js  index.html.2456f821.js  index.html.2b03f1f0.js  index.html.311a5d2c.js  index.html.38b1ee51.js  index.html.40191ce1.js  index.html.5f4e15d2.js  index.html.7221461d.js  index.html.7b429ac8.js  (+38 more)
build-app/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
docs/: README.md  deploy.sh  package.json
docs/en/: README.md
en/: base.ja.json  oui-app-active-routes.zh-tw.json  oui-app-cron.zh-cn.json  oui-app-dhcp.en.json  oui-app-dhcp.zh-cn.json  oui-app-diagnostics.zh-cn.json  oui-app-dmesg.en.json  oui-app-dmesg.ja.json  oui-app-example.en.json  oui-app-firewall.zh-tw.json  oui-app-home.zh-tw.json  oui-app-hosts.zh-cn.json  oui-app-hosts.zh-tw.json  oui-app-interfaces.zh-cn.json  oui-app-interfaces.zh-tw.json  oui-app-leds.ja.json  oui-app-login.zh-tw.json  oui-app-processes.en.json  oui-app-syslog.en.json  oui-app-syslog.ja.json  oui-app-syslog.zh-cn.json  oui-app-syslog.zh-tw.json  oui-app-upgrade.en.json  oui-app-upgrade.zh-cn.json  oui-app-users.en.json  oui-app-users.ja.json  oui-app-users.zh-tw.json  oui-app-wireless.zh-cn.json  oui-app-wizard.ja.json
guide/: acl.html  getting-started.html  index.html  lua-api.html  page.html  vue-api.html
ja/: oui-app-active-routes.en.json  oui-app-active-routes.zh-cn.json  oui-app-admin.en.json  oui-app-admin.zh-tw.json  oui-app-cron.zh-tw.json  oui-app-dmesg.zh-cn.json  oui-app-example.ja.json  oui-app-firewall.en.json  oui-app-firewall.ja.json  oui-app-firewall.zh-cn.json  oui-app-home.ja.json  oui-app-hosts.ja.json  oui-app-interfaces.en.json  oui-app-interfaces.ja.json  oui-app-processes.zh-tw.json  oui-app-routes.en.json  oui-app-routes.ja.json  oui-app-routes.zh-cn.json  oui-app-routes.zh-tw.json  oui-app-rtty.zh-cn.json  oui-app-rtty.zh-tw.json  oui-app-ssh.en.json  oui-app-ssh.zh-tw.json  oui-app-system.en.json  oui-app-users.zh-cn.json  oui-app-wireless.en.json
libuci-lua-53/: Makefile
libuhttpd/: Makefile
lua-cjson-53/: Makefile
oui-bwm/: Makefile
oui-httpd/: Makefile
oui-httpd/src/: CMakeLists.txt  avl.c  avl.h  db.c  db.h  download.c  lua2json.c  lua2json.h  lua_json.c  lua_json.h  lua_utils.c  lua_utils.h  main.c  md5.c  md5.h  multipart_parser.c  rpc.c  rpc.h  session.c  session.h  upload.c  utils.c  utils.h
oui-httpd/src/cmake/Modules/: FindLibuhttpd.cmake  FindLua51.cmake
oui-httpd/src/lua/: CMakeLists.txt  base64.c  lfs.c  ljson.c  lnetwork.c  lsystem.c  lua_compat.h  lutils.c  md5.c  rpc.lua  utils.lua
oui-io-util/: Makefile
oui-io-util/src/: CMakeLists.txt  main.c
oui-node/: Makefile
oui-rpc-core/: Makefile
oui-rpc-core/src/: CMakeLists.txt  bwmon.c  fs.c  oui.c
oui-ui/: Makefile
oui-ui-componet/: Makefile
oui-ui-core/: Config.in  Makefile
patches-nginx/: 0001-nginx-support-gzip_static.patch  0002-nginx-update-lua-nginx.patch
scripts/: clean-dist.sh
tools/: api.sh
vuci-rpc-base/: Makefile
vuci-rpc-base/src/: CMakeLists.txt  bwmon.c
vuci-ui-base/: Makefile
vwrt-rpc-core/: Makefile
vwrt-rpc-core/src/: CMakeLists.txt  vwrt.c
vwrt-ui-componet/: Makefile
vwrt-ui-core/: Makefile
zh/: index.html
zh-CN/: base.zh-tw.json  oui-app-acl.en.json  oui-app-acl.ja.json  oui-app-acl.zh-tw.json  oui-app-active-routes.ja.json  oui-app-admin.zh-cn.json  oui-app-diagnostics.en.json  oui-app-dmesg.zh-tw.json  oui-app-example.zh-tw.json  oui-app-leds.en.json  oui-app-leds.zh-tw.json  oui-app-processes.ja.json  oui-app-rtty.en.json  oui-app-ssh.ja.json  oui-app-system.zh-tw.json  oui-app-wizard.zh-tw.json
zh-TW/: oui-app-acl.zh-cn.json  oui-app-admin.ja.json  oui-app-cron.en.json  oui-app-cron.ja.json  oui-app-dhcp.ja.json  oui-app-dhcp.zh-tw.json  oui-app-diagnostics.zh-tw.json  oui-app-example.zh-cn.json  oui-app-home.en.json  oui-app-home.zh-cn.json  oui-app-leds.zh-cn.json  oui-app-login.ja.json  oui-app-processes.zh-cn.json  oui-app-rtty.ja.json  oui-app-ssh.zh-cn.json  oui-app-system.ja.json  oui-app-system.zh-cn.json  oui-app-upgrade.ja.json  oui-app-upgrade.zh-tw.json  oui-app-wireless.ja.json  oui-app-wireless.zh-tw.json  oui-app-wizard.zh-cn.json
(+675 files in other folders)
